2024-04-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier-imap.spec.in: Packaging fixes.

2023-12-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* Update rpm spec to match updated courier-authlib packaging.

5.2.6

2023-11-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* rfc822: use tm_gmtoff in preference over daylight, for determining
	TZ offset.

2023-11-09  Jaco Kroon <jaco@uls.co.za>

	* pop3+imap: log stls=1 (pop3) and starttls=1 (imap) on LOGIN lines.

5.2.5

2023-08-16  Jaco Kroon <jaco@uls.co.za>

	* Turn off IMAP_TLS_REQUIRED if IMAP_TLS is already set.

	* Compiling with -DMAILDIR_SKIP_SYMLINK_CHECKS turns off checking for
	rogue symlinks in maildirs.

5.2.4

2023-04-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix spurious gcc 13 compiler warnings. Have configure script
	include the standardized location of the CA certificate bundle,
	in addition to various legacy compatibility paths.

5.2.3

2023-02-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* all: update configure.ac to require at least version 2.0.5 of
	libidn

5.2.2

2023-02-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* imapd.c (append): No longer accept a non-standard single
	flag name instead of a parenthesized flag list to APPEND, due to
	ambiguity with the UTF8 extension.

5.2.1

2022-12-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* tcpd/libcouriertls.c (load_dh_params): OpenSSL 3 does not
	report an error when PEM_read_bio_Parameters_ex does not find
	any DH parameters, handle that.

	* Makefile: fix broken conversion from absolute to relative symlinks.
5.2.0

2022-11-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Switch to libidn2.

	* Debian/Ubuntu: update lintian overrides

2022-11-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* make install: replace absolute links with relative links.

5.1.9
	* Adjust deb packaging. Check /etc/lsb-release and include the
	distribution release in the deb package version, to faciliate