@@ -1,3 +1,7 @@
+2024-05-31  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* couriertcpd: set the IP_FREEBIND option on all listening sockets.
+
 2024-04-06  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* courier-imap.spec.in: Packaging fixes.
